@@ -502,7 +502,7 @@ background picture.</property>
 			<widget class="GtkRadioButton" id="radiobutton1">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">radiobutton1</property>
+			  <property name="label" translatable="no">radiobutton1</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -520,7 +520,7 @@ background picture.</property>
 			<widget class="GtkRadioButton" id="radiobutton2">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">radiobutton2</property>
+			  <property name="label" translatable="no">radiobutton2</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -539,7 +539,7 @@ background picture.</property>
 			<widget class="GtkRadioButton" id="radiobutton3">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">radiobutton3</property>
+			  <property name="label" translatable="no">radiobutton3</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -558,7 +558,7 @@ background picture.</property>
 			<widget class="GtkRadioButton" id="radiobutton4">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">radiobutton4</property>
+			  <property name="label" translatable="no">radiobutton4</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -577,7 +577,7 @@ background picture.</property>
 			<widget class="GtkRadioButton" id="radiobutton5">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">radiobutton5</property>
+			  <property name="label" translatable="no">radiobutton5</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="active">False</property>
@@ -637,7 +637,7 @@ background picture.</property>
       <child>
 	<widget class="GtkLabel" id="label12">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">E-Mail</property>
+	  <property name="label" translatable="no">E-Mail</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_CENTER</property>
